每日提交:策略模式+办公项目

--- a/note/docker/容器常用操作.md
+++ b/note/docker/容器常用操作.md
@@ -1,2 +1,7 @@
+# 容器常用操作
+
 ## 容器导出为镜像
 docker commit pinyougou_nginx mynginx
+
+##使用容器启动redis
+docker run -itd --name redis-eladimin -p 6379:6379 redis:6.0 
